# Strux

./: COMMIT.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: constants.rs  core_types.rs  errors.rs  lib.rs  main.rs  summary_printer.rs
src/cli/: args.rs  mod.rs  output.rs
src/parser/: action_checker.rs  header_utils.rs  header_utils_tests.rs  helpers.rs  internal_comment.rs  internal_comment_tests.rs  mod.rs  path_utils.rs  regex.rs
src/parser/pass1/: action_adder.rs  action_determiner.rs  block_processor.rs  external_delete_special.rs  (+11 more)
src/processor/: action_handler.rs  append.rs  base_setup.rs  create.rs  delete.rs  mod.rs  move_file.rs  prepend.rs  safety.rs  safety_tests.rs  summary_updater.rs  summary_updater_tests.rs
tests/: cli.rs  parser.rs  parser_integration.rs  processor.rs  processor_integration.rs  test_common.rs
tests/cli/: append_prepend.rs  basic.rs  common.rs  create.rs  delete.rs  empty_input.rs  errors.rs  mod.rs  move_file.rs  overwrite_skip.rs
tests/common/: mod.rs
tests/parser/: append_prepend.rs  common.rs  create_distant.rs  create_external.rs  create_internal.rs  create_wrapped.rs  delete.rs  edge_cases.rs  flexible_headers.rs  header_utils_tests.rs  heuristics.rs  invalid_paths.rs  mod.rs  move_file.rs  nested_content.rs  ordering.rs
tests/processor/: append_prepend.rs  base_dir.rs  common.rs  create.rs  delete.rs  duplicates.rs  errors.rs  interactions.rs  meta_readme.rs  mixed_actions.rs  mod.rs  move_file.rs  multi_create.rs  multi_delete.rs  multi_file.rs  overwrite_skip.rs  summary_updater_tests.rs
(+4 files in other folders)
