[package]
name = "markdown_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.18" # For lazy static regex compilation
regex = "1.10"
thiserror = "1.0"
assert_cmd = "2.0" # For CLI testing command extensions and assertions
predicates = "3.0" # Already listed under [dependencies], but needed for tests too. Redundant here is fine.
assert_fs = "1.1" # Already listed under [dependencies], but needed for tests too. Redundant here is fine.
