[package]
name = "strux"
version = "0.5.0"
edition = "2021"
description = "Strux: A CLI tool to generate directory structures and file contents from structured markdown."
license = "MIT"
authors = ["author@romelium.cc"]
repository = "https://github.com/romelium/strux"
readme = "README.md"
keywords = ["markdown", "cli", "generator", "filesystem", "scaffold"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[dependencies]
# Core dependencies needed by the library and binary at runtime
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.18" # For lazy static regex compilation
regex = "1.10"
thiserror = "1.0"

[dev-dependencies]
# Dependencies only needed for running tests (`cargo test`)
assert_cmd = "2.0" # For CLI testing command extensions and assertions
predicates = "3.0" # For assertions in tests
assert_fs = "1.1" # For filesystem fixtures in tests
